# FrameSDK

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
docs/: loaders.md  models.md  translators.md  validators.md
frame/: __init__.py
frame/loaders/: __init__.py  assembler.py  yaml_reader.py
frame/models/: __init__.py  acts_model.py  base.py  expect_model.py  facts_model.py  frame_model.py  map_model.py  rules_model.py
frame/schemas/: map.schema.json  rules.schema.json
frame/translators/: __init__.py  yaml_to_json.py
frame/validators/: __init__.py  cross_file_validator.py  limits_validator.py  result.py  schema_validator.py
framesdkpy/: __init__.py
framesdkpy/loaders/: __init__.py  assembler.py  yaml_reader.py
framesdkpy/models/: __init__.py  acts_model.py  base.py  expect_model.py  facts_model.py  frame_model.py  map_model.py  rules_model.py
framesdkpy/schemas/: acts.schema.json  expect.schema.json  facts.schema.json  frame.schema.json  map.schema.json
framesdkpy/translators/: __init__.py  normalizer.py  yaml_to_json.py
framesdkpy/validators/: __init__.py  cross_file_validator.py  limits_validator.py  result.py  schema_validator.py
tests/: README.md  test_assembler_contract.py  test_broken_fixtures.py  test_loaders.py  test_models.py  test_pharmax_integration.py  test_public_api.py  test_schema_shape_preservation.py  test_translators.py  test_validators.py
tests/fixtures/: acts.yaml  expect.yaml  facts.yaml  map.yaml  rules.yaml
