[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framesdkpy"]

[project]
name = "framesdkpy"
version = "0.3.0"
description = "Python SDK for FRAME — typed project-context architecture for AI-assisted development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Arinze Elenasulu" },
]
keywords = ["frame", "ai-agents", "project-context", "agent-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "referencing>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/haxsysgit/frame-py"
Repository = "https://github.com/haxsysgit/frame-py"
